k8s/embassy/thoas_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thoas-server-deployment
  namespace: thoas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thoas-server
  template:
    metadata:
      labels:
        app: thoas-server
    spec:
      imagePullSecrets:
        - name: thoas-docker-deploy
      containers:
        - name: thoas-server
          image: dockerhub.ebi.ac.uk/ensembl-apps/ensembl-thoas:00dafc50
          ports:
            - containerPort: 8000
          imagePullPolicy: Always
          command: ["uvicorn"]
          args: [
            "--host",
            "0.0.0.0",
            "--port",
            "8000",
            "--env-file",
            "/env/.env",
            "graphql_service.server:APP"
          ]
          volumeMounts:
            - mountPath: /conf/
              name: mongo-connection-cm
            - mountPath: /env/.env
              name: mongo-conf-filepath-cm
          resources:
            limits:
              cpu: 2000m
              memory: 2Gi
            requests:
              cpu: 500m
              memory: 1Gi
      volumes:
        - name: mongo-connection-cm
          configMap:
            name: mongo-connection-cm
        - name: mongo-conf-filepath-cm
          configMap:
            name: mongo-conf-filepath-cm
