k8s/embassy/external_mongo_endpoint.yaml
apiVersion: v1
kind: Endpoints
# Target for MongoDB traffic from inside k8s
# Note the name matches the Service
metadata:
  name: mongo
subsets:
  - addresses:
      - ip: 193.62.194.229
    ports:
      - port: 27017
