k8s/embassy/external_mongo_service.yaml
apiVersion: v1
kind: Service
# A service to receive traffic to external MongoDB
metadata:
  name: mongo
  namespace: thoas
  labels:
    app: thoas-mongo-svc
spec:
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: 27017
