k8s/embassy/thoas_service_node.yaml
apiVersion: v1
kind: Service
metadata:
  name: thoas-server-svc
  namespace: thoas
  labels:
    app: thoas-server-svc
spec:
  selector:
    app: thoas-server
  type: ClusterIP
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
