k8s/embassy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: thoas-ingress
  namespace: thoas
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/whitelist-source-range: 193.62.0.0/16
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: thoas-server-svc
              servicePort: 8000
            path: /
